--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "template": "node ./tools/scripts/generate.js"
   },
   "dependencies": {
+    "@next/font": "^13.1.1",
     "classnames": "^2.3.1",
     "generate-template-files": "^3.2.0",
     "icomoon-react": "^3.0.0",
